fixed overflow

--- a/css/message.css
+++ b/css/message.css
@@ -22,6 +22,7 @@ body {
   justify-content: center;
   align-items: center;
   overflow: hidden;
+  overflow-y: auto !important;
 }
 
 .message-container {
